# compare-os

./: .gitignore  README.md  main.py  pyproject.toml
src/: secret.py  send_email.py
src/web_scrapp/service_order/: get_orders.py
src/web_scrapp/teams/: send_message.py
