[project]
name = "how-to-use"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lucasxaviervieira", email = "lucasdavid.xavier@gmail.com"},
]
dependencies = [
    "selenium>=4.21.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
